Revise README.md with project information and features
Updated the README.md to include project details, features, technologies, and team organization for FloodRoute application.